# SemanticScholarMCP

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
src/semantic_scholar_mcp/: __init__.py  server.py
tests/: conftest.py  test_integration.py  test_server.py
