[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-scholar-mcp"
version = "0.1.0"
description = "MCP server for accessing Semantic Scholar academic papers"
authors = [
    {name = "SnippetSquid", email = "info@snippetsquid.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "semantic-scholar", "academic", "papers", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
metadata = [
    "PyPDF2>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/SnippetSquid/SemanticScholarMCP"
Repository = "https://github.com/SnippetSquid/SemanticScholarMCP"

[project.scripts]
semantic-scholar-mcp = "semantic_scholar_mcp.server:main"

[project.entry-points."console_scripts"]
semantic-scholar-mcp = "semantic_scholar_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"